<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name_label">用户名</string>
    <string name="password_label">密码</string>
    <string name="login_button">登陆</string>
    <string name="credit_label">积分</string>
    <string name="question_button">我要提问</string>
    <string name="answer_button">我要回答</string>
    <string name="my_question_button">我的问题</string>
    <string name="my_answer_button">我的答案</string>
    <string name="question_label">问题</string>
    <string name="submit_button">提交</string>
    <string name="deadline_label">截止时间</string>
    <string name="answer_label">答案</string>
    <string name="feedback_accept_button">赞</string>
    <string name="feedback_deny_button">踩</string>
    <string name="count_label">分发人数</string>
    <string name="period_label">有效时长</string>
    <string name="given_credit_label">人均积分</string>
    <string name="given_credit_hint">2</string>
    <string name="count_hint">5</string>
    <string name="period_hint">5</string>
    <string name="feedback_count_label">回答人数</string>
    <string name="feedback_credit_label">消耗积分</string>

</resources>
