<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/my_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/my_answer_button"
        android:layout_alignRight="@+id/question_button"
        android:text="@string/my_question_button" />

    <TextView
        android:id="@+id/credit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/credit_label"
        android:layout_alignBottom="@+id/credit_label"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/credit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/question_button"
        android:layout_marginBottom="88dp"
        android:layout_marginRight="27dp"
        android:layout_toLeftOf="@+id/credit_value"
        android:text="@string/credit_label" />

    <Button
        android:id="@+id/question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer_button"
        android:layout_alignBottom="@+id/answer_button"
        android:layout_toLeftOf="@+id/credit_value"
        android:text="@string/question_button" />

    <Button
        android:id="@+id/answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/credit_value"
        android:text="@string/answer_button" />

    <Button
        android:id="@+id/my_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answer_button"
        android:layout_below="@+id/answer_button"
        android:layout_marginTop="42dp"
        android:text="@string/my_answer_button" />

</RelativeLayout>