<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/feedback_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/question_label" />

    <TextView
        android:id="@+id/feedback_answer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/feedback_question_label"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/answer_label" />

    <TextView
        android:id="@+id/feedback_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/feedback_answer_label"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/feedback_count_label" />

    <TextView
        android:id="@+id/feedback_credit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/feedback_count_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/feedback_credit_label" />

    <TextView
        android:id="@+id/feedback_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/feedback_credit_label"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/period_label" />

    
    
    <TextView
        android:id="@+id/feedback_question_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feedback_question_label"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/feedback_question_label" />

    <TextView
        android:id="@+id/feedback_answer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feedback_answer_label"
        android:layout_alignLeft="@+id/feedback_question_content"
        android:layout_toRightOf="@+id/feedback_answer_label" />

    <TextView
        android:id="@+id/feedback_count_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feedback_count_label"
        android:layout_alignLeft="@+id/feedback_answer_content"
        android:layout_toRightOf="@+id/feedback_count_label" />

    <TextView
        android:id="@+id/feedback_credit_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feedback_credit_label"
        android:layout_alignLeft="@+id/feedback_answer_content"
        android:layout_toRightOf="@+id/feedback_credit_label" />

    <TextView
        android:id="@+id/feedback_period_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/feedback_period_label"
        android:layout_alignLeft="@+id/feedback_answer_content"
        android:layout_toRightOf="@+id/feedback_period_label" />

    <Button
        android:id="@+id/feedback_accept_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="80dp"
        android:text="@string/feedback_accept_button" />

    <Button
        android:id="@+id/feedback_deny_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/feedback_accept_button"
        android:layout_alignBottom="@+id/feedback_accept_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp"
        android:text="@string/feedback_deny_button" />

</RelativeLayout>