<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/answer_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/question_label" />

    <TextView
        android:id="@+id/answer_credit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/answer_question_label"
        android:layout_below="@+id/answer_question_label"
        android:layout_marginTop="46dp"
        android:text="@string/credit_label" />

    <TextView
        android:id="@+id/answer_question_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer_question_label"
        android:layout_alignBottom="@+id/answer_question_label"
        android:layout_marginLeft="72dp"
        android:layout_toRightOf="@+id/answer_question_label" />

    <TextView
        android:id="@+id/answer_credit_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answer_credit_label"
        android:layout_alignLeft="@+id/answer_question_content" />

    <TextView
        android:id="@+id/answer_deadline_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answer_credit_label"
        android:layout_below="@+id/answer_credit_label"
        android:layout_marginTop="51dp"
        android:text="@string/deadline_label" />

    <TextView
        android:id="@+id/answer_deadline_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answer_deadline_label"
        android:layout_alignLeft="@+id/answer_credit_content" />

    <TextView
        android:id="@+id/answer_answer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answer_deadline_label"
        android:layout_below="@+id/answer_deadline_label"
        android:layout_marginTop="54dp"
        android:text="@string/answer_label" />

    <EditText
        android:id="@+id/answer_answer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer_answer_label"
        android:layout_alignBottom="@+id/answer_answer_label"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <Button
        android:id="@+id/answer_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_answer_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/submit_button" />

</RelativeLayout>