<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_name_content"
        android:layout_alignBottom="@+id/user_name_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="31dp"
        android:text="@string/user_name_label" />

    <EditText
        android:id="@+id/user_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="173dp"
        android:layout_toRightOf="@+id/user_name_label"
        android:ems="10" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_name_label"
        android:layout_below="@+id/user_name_content"
        android:layout_marginTop="41dp"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/password_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_label"
        android:layout_alignBottom="@+id/password_label"
        android:layout_alignLeft="@+id/user_name_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/login_button" />

</RelativeLayout>
